--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
-            		<span>Data analytics | Business intelligence</span><br />
+            		<span>Data analytics</span><br />
+					<span>Business intelligence</span><br />
+					<span>Politólogo</span><br />
         		</h3>
    			 </div>
 		</header>
@@ -535,6 +537,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
