--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 		<header id="header">
    			<div class="inner" style="text-align: center">
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
-        		<h1 style="margin: 0; padding: 0; width: 100%;"><strong>Emil Sánchez</strong></h1>
-        <h3 style="margin-top: 0.5rem; width: 100%;">
-            <span>Data analytics</span><br />
-            <span>Business intelligence</span><br />
-            <span>Politólogo</span>
-        </h3>
+        		 <h1><strong>Emil Sánchez</strong></h1>
+				<h3>
+					<span>Data analytics</span><br />
+					<span>Business intelligence</span><br />
+					<span>Politólogo</span><br />
+				</h3>
    			 </div>
 		</header>
 
