--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 		<header id="header">
-   			<div class="inner" style="text-align: center; width: 100%; display: block;">
+   			<div class="inner" style="text-align: center">
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		 <h1><strong>Emil Sánchez</strong></h1>
 				<h3>
@@ -537,6 +537,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
