--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		
-		<title>Emil Sánchez | Business intelligence | Data Analytics</title>
+		<title>Emil Sánchez | Data Analytics | Business intelligence </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -537,6 +537,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
